# pytest-tqdm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_tqdm/: __init__.py  chart.py  plugin.py
tests/: test_chart.py  test_plugin.py
