[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-tqdm"
version = "0.1.0"
description = "A single aggregated tqdm progress bar for pytest, xdist-aware, with failures printed above the bar. Interactive-only."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michał Pasternak", email = "michal.dtz@gmail.com" }]
keywords = ["pytest", "tqdm", "progress", "progressbar", "xdist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.0",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/mpasternak/pytest-tqdm"
Repository = "https://github.com/mpasternak/pytest-tqdm"
Issues = "https://github.com/mpasternak/pytest-tqdm/issues"

# Entry-point: pytest auto-discovers this plugin via the pytest11 group.
[project.entry-points.pytest11]
tqdm = "pytest_tqdm.plugin"

[dependency-groups]
dev = [
    "pytest-xdist>=3.0",
    "pytest-rerunfailures>=12.0",
    "pytest-sugar>=0.9.7",
    "ruff>=0.6",
    "pre-commit>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_tqdm"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
